@@ -61,6 +61,7 @@
                 <property name="label" translatable="yes"></property>
                 <property name="use_markup">True</property>
                 <property name="wrap">True</property>
+                <property name="justify">left</property>
             </object>
             <packing>
                 <property name="expand">False</property>
